--- a/module/exim4/reject/config/reject.yml
+++ b/module/exim4/reject/config/reject.yml
@@ -1,9 +1,11 @@
-type: log
+type: filestream
+enabled: true
+id: exim4-rejectlog
 paths:
 {{ range $i, $path := .paths }}
  - {{$path}}
 {{ end }}
-exclude_files: [".gz$"]
+prospector.scanner.exclude_files: [".gz$"]
 
 # https://www.elastic.co/guide/en/beats/filebeat/7.x/filebeat-input-log.html#filebeat-input-log-include-lines
 include_lines:
